--- a/monitor.html
+++ b/monitor.html
@@ -8,7 +8,6 @@
    	var SOCKET=null;
 	var MAP=null; 
 	var MARCADORES=[];
-	var REINICIO=false;
 
 	   function  conectarse(){
 	    	SOCKET = io.connect("http://127.0.0.1:9095");
@@ -23,16 +22,13 @@
 		});
 		SOCKET.on("disconnect",function(){
 			document.getElementById("idEstado").innerHTML="DESCONECTADO...";
-			REINICIO=true;
+			eliminarMarcadores();
 		});
 
 		iniciarMapa();
 
 	    	SOCKET.on("monitorPrincipal",function(data){//{id,lat,lon}
-			if(REINICIO===true){
-				alert("REFRESQUE EL NAVEGADOR");
-				return;	
-			}
+			
 			console.log(data);
 	    		var index=buscar(data);
 			if(index===-1){//ES NUEVO
@@ -42,6 +38,14 @@
 				actualizarPosicion(index,data);
 			}
 
+	    	});
+		SOCKET.on("monitorPrincipalDisconnet",function(data){//{id,socket_id}
+			
+			console.log(data);
+	    		var index=buscar(data);
+			if(index!==-1){//ENCONTRADO
+				removerPosicion(index);
+			}
 	    	});
 	
 	    }
@@ -69,7 +73,7 @@
 	function nuevoPosicion(data){
 		var marca=new cMarker(MAP,data.id,data.lat,data.lon);
 		marca.dibujar();
-		MARCADORES.push(marca);
+		MARCADORES.push(marca);//agregamos al ARRAY
 		
 	}
 	function actualizarPosicion(index,data){
@@ -77,6 +81,18 @@
 		marca.remover();	
 		marca.update(data.lat,data.lon);
 		marca.dibujar();
+	}
+	function removerPosicion(index){
+		var marca=MARCADORES[index];
+		marca.remover();
+		MARCADORES.splice(index, 1);//eliminamos del ARRAY	
+	}
+	function eliminarMarcadores(){
+		var n=MARCADORES.length;
+		for(var i=0;i<n;i++){
+			MARCADORES[i].remover();
+		}
+		MARCADORES=[];
 	}
     </script>
 </head>
